[package]
name = "ghbu"
description = "Backup your GitHub Repositories"
version = "0.1.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/patrickbucher/ghbu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
git2 = "0.18.3"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde_json = "1.0.116"

[profile.release]
strip = "symbols"
